# simpy-course-by-the-open-science-nerd

./: .pre-commit-config.yaml  01_sampling.py  02_basic_simpy.py  03a_exercise1.py  04_111_model.py  04_111_model_refactored.py  05_basic_results.py  05_basic_results_refactored.py  07_experiments.py  10_multiple_arrival_processes.py  10_multiple_arrival_processes_single_arrival_generator.py  11_blocking.py  LICENSE  README.md  arrivals_generator.py  distributions.py  example_FilterStore.py  experiment.py  exponential_example_class.py  logging_and_tracing.py  main.py  pyproject.toml  sensible_constants.py  service_process.py  single_run.py
full_model/: 08_full_model.py  08_full_model_refactored.py  Overview.py  app.py  execution.py  experiment.py  main.py  output_analysis.py  probability_distributions.py  processes.py  simulation_constants.py  tracing.py
full_model/app_utility/: file_io.py  results.py
full_model/pages/: 1_Batch_Experiments.py  1_Interactive_Simulation.py  2_🧪_Batch_Experiments.py  3_License.py  4_About.py
full_model/resources/: batch_upload_txt.md  license.md  model_info.md
