[project]
name = "simpy-course-by-the-open-science-nerd"
version = "0.1.0"
description = "Code written while watching Simpy course by The Open Science Nerd"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
