[project]
name = "simpy-course-by-the-open-science-nerd"
version = "0.1.0"
description = "Code written while watching Simpy course by The Open Science Nerd"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prek (>=0.2.24,<0.3.0)",
    "marimo (>=0.18.4,<0.19.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "simpy (>=4.1.1,<5.0.0)",
    "colored (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
